Beta AcousticMobilePush build: 3.8.8
Beta AcousticMobilePush Change Notes:
Bug Fixes

- None

Improvements

- Deploy to npm at ....

Our environment for this release:

- Android Studio Hedgehog | 2023.1.1 Patch 1
- Xcode version: 15
- MacOS 14.0
- iOS
- Android target API level 21 to 34
- Cordova version: 11.1.0 (cordova-lib@11.1.0)
- Cordova Android plugin version: 10.1.2
- Cordova iOS plugin version: 6.3.0
- Gradle version: 7.6

Known Issues

- None.

--- a/plugins/co.acoustic.mobile.push.plugin.ios-notification-service/package.json
+++ b/plugins/co.acoustic.mobile.push.plugin.ios-notification-service/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "co.acoustic.mobile.push.plugin.ios-notification-service",
-  "version": "3.8.7",
-  "description": "iOS notification service for Acoustic Campaign Mobile Push SDKs",
-  "author": "Acoustic MCE",
-  "license": "Apache 2.0 License"
+    "author": "Acoustic MCE",
+    "description": "iOS notification service for Acoustic Campaign Mobile Push SDKs",
+    "license": "Apache 2.0 License",
+    "name": "co.acoustic.mobile.push.plugin.ios-notification-service",
+    "version": "3.8.8"
 }
