--- a/applications/samples/Sample/package.json
+++ b/applications/samples/Sample/package.json
@@ -13,19 +13,12 @@
         "IOS_PROD_APPKEY": "",
         "SERVER_URL": "https://mobile-sdk-lib-xx-y.brilliantcollector.com",
         "LOGLEVEL": "error",
-        "MCE_CAN_SYNC_OVERRIDE": "true",
-        "CHANNEL_NAME": "MCE SDK Notification Channel",
-        "CHANNEL_DESCRIPTION": "This is the notification channel for the MCE SDK sample application",
-        "CHANNEL_ID": "mce_sample_channel",
-        "INVALIDATE_EXISTING_USER": "false",
-        "AUTO_REINITIALIZE": "true",
-        "AUTO_INITIALIZE": "true"
+        "MCE_CAN_SYNC_OVERRIDE": "true"
       },
       "co.acoustic.mobile.push.plugin.fcm": {},
       "co.acoustic.mobile.push.plugin.location": {
         "SYNC_RADIUS": "10000",
-        "SYNC_INTERVAL": "60",
-        "AUTO_INITIALIZE_LOCATION": "true"
+        "SYNC_INTERVAL": "60"
       },
       "co.acoustic.mobile.push.plugin.beacon": {
         "UUID": "21A9A7F4-0DD8-46B7-9D4D-379F3C4AF77D"
@@ -64,7 +57,7 @@
     "co.acoustic.mobile.push.sdk": "file:../../../plugins/co.acoustic.mobile.push.sdk",
     "co.acoustic.mobile.push.sdk-tests": "file:../../../plugins/co.acoustic.mobile.push.sdk/tests",
     "cordova-android": "^10.1.2",
-    "cordova-ios": "^6.3.0",
+    "cordova-ios": "^7.0.1",
     "cordova-plugin-test-framework": "^1.1.6"
   }
 }
