--- a/plugins/co.acoustic.mobile.push.plugin.action-menu/package.json
+++ b/plugins/co.acoustic.mobile.push.plugin.action-menu/package.json
@@ -1,30 +1,30 @@
 {
-    "name": "co.acoustic.mobile.push.plugin.action-menu",
-    "version": "3.8.7",
+    "author": "Acoustic MCE",
+    "bugs": {
+        "url": "https://github.com/Acoustic-Mobile-Push/Cordova/issues"
+    },
     "description": "Displays the Action Menu for Acoustic MCE Push Services",
     "devDependencies": {
         "@types/cordova": "^0.0.34",
         "typescript": "^4.4.3"
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Acoustic-Mobile-Push/Cordova.git"
+    "engines": {
+        "cordova": ">=3.0"
     },
+    "homepage": "https://github.com/Acoustic-Mobile-Push/Cordova#readme",
     "keywords": [
         "mce",
         "ecosystem:cordova",
         "cordova-ios"
     ],
-    "engines": {
-        "cordova": ">=3.0"
-    },
-    "author": "Acoustic MCE",
     "license": "Apache 2.0 License",
-    "bugs": {
-        "url": "https://github.com/Acoustic-Mobile-Push/Cordova/issues"
-    },
-    "homepage": "https://github.com/Acoustic-Mobile-Push/Cordova#readme",
+    "name": "co.acoustic.mobile.push.plugin.action-menu",
     "peerDependencies": {
         "co.acoustic.mobile.push.sdk": "file:../co.acoustic.mobile.push.sdk"
-    }
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Acoustic-Mobile-Push/Cordova.git"
+    },
+    "version": "3.8.8"
 }
