--- a/plugins/co.acoustic.mobile.push.plugin.beacon/package.json
+++ b/plugins/co.acoustic.mobile.push.plugin.beacon/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "co.acoustic.mobile.push.plugin.beacon",
-    "version": "3.8.7",
-    "description": "Allows Cordova applications to integrate with Acoustic MCE Push Services",
+    "author": "Acoustic MCE",
+    "bugs": {
+        "url": "https://github.com/Acoustic-Mobile-Push/Cordova/issues"
+    },
     "cordova": {
         "id": "co.acoustic.mobile.push.beacon",
         "platforms": [
@@ -9,30 +10,29 @@
             "android"
         ]
     },
+    "description": "Allows Cordova applications to integrate with Acoustic MCE Push Services",
     "devDependencies": {
         "@types/cordova": "^0.0.34",
         "typescript": "^4.4.3"
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Acoustic-Mobile-Push/Cordova.git"
+    "engines": {
+        "cordova": ">=3.0"
     },
+    "homepage": "https://github.com/Acoustic-Mobile-Push/Cordova#readme",
     "keywords": [
         "mce",
         "ecosystem:cordova",
         "cordova-ios",
         "cordova-android"
     ],
-    "engines": {
-        "cordova": ">=3.0"
-    },
-    "author": "Acoustic MCE",
     "license": "Apache 2.0 License",
-    "bugs": {
-        "url": "https://github.com/Acoustic-Mobile-Push/Cordova/issues"
-    },
-    "homepage": "https://github.com/Acoustic-Mobile-Push/Cordova#readme",
+    "name": "co.acoustic.mobile.push.plugin.beacon",
     "peerDependencies": {
         "co.acoustic.mobile.push.sdk": "file:../co.acoustic.mobile.push.sdk"
-    }
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Acoustic-Mobile-Push/Cordova.git"
+    },
+    "version": "3.8.8"
 }
