--- a/plugins/co.acoustic.mobile.push.plugin.inbox/package.json
+++ b/plugins/co.acoustic.mobile.push.plugin.inbox/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "co.acoustic.mobile.push.plugin.inbox",
-    "version": "3.8.7",
-    "description": "Inbox Action for Acoustic MCE Push Services",
+    "author": "Acoustic MCE",
+    "bugs": {
+        "url": "https://github.com/Acoustic-Mobile-Push/Cordova/issues"
+    },
     "cordova": {
         "id": "co.acoustic.mobile.push.inbox",
         "platforms": [
@@ -9,34 +10,33 @@
             "android"
         ]
     },
-    "peerDependencies": {
-        "co.acoustic.mobile.push.sdk": "file:../co.acoustic.mobile.push.sdk",
-        "jquery": "^3.6.0",
-        "jquery-mobile": "^1.5.0-alpha.1"
-    },
+    "description": "Inbox Action for Acoustic MCE Push Services",
     "devDependencies": {
         "@types/cordova": "^0.0.34",
         "@types/jquery": "^3.5.6",
         "@types/jquerymobile": "^1.4.31",
         "typescript": "^4.4.3"
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Acoustic-Mobile-Push/Cordova.git"
+    "engines": {
+        "cordova": ">=3.0"
     },
+    "homepage": "https://github.com/Acoustic-Mobile-Push/Cordova#readme",
     "keywords": [
         "mce",
         "ecosystem:cordova",
         "cordova-ios",
         "cordova-android"
     ],
-    "engines": {
-        "cordova": ">=3.0"
-    },
-    "author": "Acoustic MCE",
     "license": "Apache 2.0 License",
-    "bugs": {
-        "url": "https://github.com/Acoustic-Mobile-Push/Cordova/issues"
+    "name": "co.acoustic.mobile.push.plugin.inbox",
+    "peerDependencies": {
+        "co.acoustic.mobile.push.sdk": "file:../co.acoustic.mobile.push.sdk",
+        "jquery": "^3.6.0",
+        "jquery-mobile": "^1.5.0-alpha.1"
     },
-    "homepage": "https://github.com/Acoustic-Mobile-Push/Cordova#readme"
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Acoustic-Mobile-Push/Cordova.git"
+    },
+    "version": "3.8.8"
 }
