--- a/plugins/co.acoustic.mobile.push.sdk/package.json
+++ b/plugins/co.acoustic.mobile.push.sdk/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "co.acoustic.mobile.push.sdk",
-  "version": "3.8.7",
-  "description": "Allows Cordova applications to integrate with Acoustic MCE Push Services",
-  "cordova": {
-    "id": "co.acoustic.mobile.push",
-    "platforms": [
-      "ios",
-      "android@10"
-    ]
-  },
-  "peerDependencies": {
-    "jquery": "^3.6.0"
-  },
-  "devDependencies": {
-    "@types/cordova": "^0.0.34",
-    "@types/jquery": "^3.5.6",
-    "typescript": "^4.4.3"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Acoustic-Mobile-Push/Cordova.git"
-  },
-  "keywords": [
-    "mce",
-    "ecosystem:cordova",
-    "cordova-ios",
-    "cordova-android"
-  ],
-  "engines": {
-    "cordova": ">=3.0"
-  },
-  "author": "Acoustic MCE",
-  "license": "Apache 2.0 License",
-  "bugs": {
-    "url": "https://github.com/Acoustic-Mobile-Push/Cordova/issues"
-  },
-  "homepage": "https://github.com/Acoustic-Mobile-Push/Cordova#readme"
+    "author": "Acoustic MCE",
+    "bugs": {
+        "url": "https://github.com/Acoustic-Mobile-Push/Cordova/issues"
+    },
+    "cordova": {
+        "id": "co.acoustic.mobile.push",
+        "platforms": [
+            "ios",
+            "android@10"
+        ]
+    },
+    "description": "Allows Cordova applications to integrate with Acoustic MCE Push Services",
+    "devDependencies": {
+        "@types/cordova": "^0.0.34",
+        "@types/jquery": "^3.5.6",
+        "typescript": "^4.4.3"
+    },
+    "engines": {
+        "cordova": ">=3.0"
+    },
+    "homepage": "https://github.com/Acoustic-Mobile-Push/Cordova#readme",
+    "keywords": [
+        "mce",
+        "ecosystem:cordova",
+        "cordova-ios",
+        "cordova-android"
+    ],
+    "license": "Apache 2.0 License",
+    "name": "co.acoustic.mobile.push.sdk",
+    "peerDependencies": {
+        "jquery": "^3.6.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Acoustic-Mobile-Push/Cordova.git"
+    },
+    "version": "3.8.8"
 }
