--- a/plugins/co.acoustic.mobile.push.sdk/tsconfig.json
+++ b/plugins/co.acoustic.mobile.push.sdk/tsconfig.json
@@ -5,6 +5,7 @@
     "outDir": "./www/js",
     "lib": ["DOM", "ES2016"],
     "declaration": true,
+    "declarationDir": "./types",
     "allowJs": false,
     "target": "es5"
   },
