Beta AcousticMobilePush build: 3.9.2
Beta AcousticMobilePush Change Notes:
Bug Fixes

- None

Improvements

- Deploy to npm at ....

Our environment for this release:

- Android Studio Hedgehog | 2023.1.1 Patch 1
- Xcode version: 15
- MacOS 14.0
- iOS
- Android target API level 21 to 34
- Cordova version: 11.1.0 (cordova-lib@11.1.0)
- Cordova Android plugin version: 10.1.2
- Cordova iOS plugin version: 6.3.0
- Gradle version: 7.6

Known Issues

- None.

--- a/plugins/cordova-acoustic-mobile-push-plugin-geofence/package.json
+++ b/plugins/cordova-acoustic-mobile-push-plugin-geofence/package.json
@@ -29,18 +29,18 @@
         "cordova-android"
     ],
     "license": "See license in license/license.txt",
-    "name": "cordova-acoustic-mobile-push-plugin-geofence",
+    "name": "cordova-acoustic-mobile-push-plugin-geofence-beta",
     "peerDependencies": {
-        "cordova-acoustic-mobile-push-sdk": "file:../cordova-acoustic-mobile-push-sdk"
+        "cordova-acoustic-mobile-push-sdk-beta": "3.9.2"
     },
     "repository": {
+        "directory": "plugins/cordova-acoustic-mobile-push-plugin-geofence",
         "type": "git",
-        "url": "git+https://github.com/go-acoustic/Acoustic-Mobile-Push-Cordova.git",
-        "directory": "plugins/cordova-acoustic-mobile-push-plugin-geofence"
+        "url": "git+https://github.com/go-acoustic/Acoustic-Mobile-Push-Cordova.git#beta"
     },
     "scripts": {
         "preinstall": "npm run tsc",
         "tsc": "tsc"
     },
-    "version": "3.9.1"
+    "version": "3.9.2"
 }
