--- a/plugins/cordova-acoustic-mobile-push-plugin-ios-notification-service/package.json
+++ b/plugins/cordova-acoustic-mobile-push-plugin-ios-notification-service/package.json
@@ -29,18 +29,19 @@
         "cordova-ios"
     ],
     "license": "See license in license/license.txt",
-    "name": "cordova-acoustic-mobile-push-plugin-ios-notification-service",
+    "name": "cordova-acoustic-mobile-push-plugin-ios-notification-service-beta",
     "peerDependencies": {
-        "cordova-acoustic-mobile-push-sdk": "file:../cordova-acoustic-mobile-push-sdk",
+        "cordova-acoustic-mobile-push-sdk-beta": "3.9.2",
         "jquery": "^3.6.0",
         "jquery-mobile": "^1.5.0-alpha.1"
     },
     "repository": {
+        "directory": "plugins/cordova-acoustic-mobile-push-plugin-ios-notification-service",
         "type": "git",
-        "url": "git+https://github.com/go-acoustic/Acoustic-Mobile-Push-Cordova.git",
-        "directory": "plugins/cordova-acoustic-mobile-push-plugin-ios-notification-service"
+        "url": "git+https://github.com/go-acoustic/Acoustic-Mobile-Push-Cordova.git#beta"
     },
     "scripts": {
+        
     },
-    "version": "3.9.1"
+    "version": "3.9.2"
 }
