--- a/plugins/cordova-acoustic-mobile-push-plugin-location/package.json
+++ b/plugins/cordova-acoustic-mobile-push-plugin-location/package.json
@@ -32,18 +32,18 @@
         "cordova-android"
     ],
     "license": "See license in license/license.txt",
-    "name": "cordova-acoustic-mobile-push-plugin-location",
+    "name": "cordova-acoustic-mobile-push-plugin-location-beta",
     "peerDependencies": {
-        "cordova-acoustic-mobile-push-sdk": "file:../cordova-acoustic-mobile-push-sdk"
+        "cordova-acoustic-mobile-push-sdk-beta": "3.9.2"
     },
     "repository": {
+        "directory": "plugins/cordova-acoustic-mobile-push-plugin-location",
         "type": "git",
-        "url": "git+https://github.com/go-acoustic/Acoustic-Mobile-Push-Cordova.git",
-        "directory": "plugins/cordova-acoustic-mobile-push-plugin-location"
+        "url": "git+https://github.com/go-acoustic/Acoustic-Mobile-Push-Cordova.git#beta"
     },
     "scripts": {
         "preinstall": "npm run tsc",
         "tsc": "tsc"
     },
-    "version": "3.9.1"
+    "version": "3.9.2"
 }
