--- a/plugins/cordova-acoustic-mobile-push-plugin-snooze/src/android/build-extras.gradle
+++ b/plugins/cordova-acoustic-mobile-push-plugin-snooze/src/android/build-extras.gradle
@@ -17,7 +17,7 @@ repositories{
 
 dependencies {
   implementation('androidx.appcompat:appcompat:1.6.0')
-  implementation "io.github.acoustic-analytics:acoustic-mobile-push-android-snooze:+"
+  implementation "io.github.go-acoustic:acoustic-mobile-push-android-snooze:+"
 }
 
 android {
