--- a/plugins/cordova-acoustic-mobile-push-plugin-inapp/package.json
+++ b/plugins/cordova-acoustic-mobile-push-plugin-inapp/package.json
@@ -32,17 +32,17 @@
     "license": "See license in license/license.txt",
     "name": "cordova-acoustic-mobile-push-plugin-inapp-beta",
     "peerDependencies": {
-        "cordova-acoustic-mobile-push-sdk-beta": "3.9.15",
+        "cordova-acoustic-mobile-push-sdk-beta": "3.9.16",
         "jquery": "^3.6.0"
     },
     "repository": {
         "directory": "plugins/cordova-acoustic-mobile-push-plugin-inapp",
         "type": "git",
-        "url": "git+https://github.com/go-acoustic/Acoustic-Mobile-Push-Cordova.git#beta"
+        "url": "https://github.com/aipoweredmarketer/ca-mce-cordova-sdk"
     },
     "scripts": {
         "preinstall": "npm run tsc",
         "tsc": "tsc"
     },
-    "version": "3.9.15"
+    "version": "3.9.16"
 }
