--- a/plugins/cordova-acoustic-mobile-push-sdk/package.json
+++ b/plugins/cordova-acoustic-mobile-push-sdk/package.json
@@ -37,11 +37,11 @@
     "repository": {
         "directory": "plugins/cordova-acoustic-mobile-push-sdk",
         "type": "git",
-        "url": "git+https://github.com/go-acoustic/Acoustic-Mobile-Push-Cordova.git#beta"
+        "url": "https://github.com/aipoweredmarketer/ca-mce-cordova-sdk"
     },
     "scripts": {
         "preinstall": "npm run tsc",
         "tsc": "tsc"
     },
-    "version": "3.9.15"
+    "version": "3.9.16"
 }
