Beta AcousticMobilePush build: 3.9.24
Beta AcousticMobilePush Change Notes:
Bug Fixes

- None

Improvements

- Deploy to npm at ....

Our environment for this release:

- Android Studio Hedgehog | 2023.1.1 Patch 1
- Xcode version: 15
- MacOS 14.0
- iOS
- Android target API level 21 to 34
- Cordova version: 11.1.0 (cordova-lib@11.1.0)
- Cordova Android plugin version: 10.1.2
- Cordova iOS plugin version: 6.3.0
- Gradle version: 7.6

Known Issues

- None.

--- a/plugins/cordova-acoustic-mobile-push-plugin-inapp/package.json
+++ b/plugins/cordova-acoustic-mobile-push-plugin-inapp/package.json
@@ -32,13 +32,14 @@
     "license": "See license in license/license.txt",
     "name": "cordova-acoustic-mobile-push-plugin-inapp-beta",
     "peerDependencies": {
-        "cordova-acoustic-mobile-push-sdk-beta": "3.9.23",
+        "cordova-acoustic-mobile-push-sdk": "npm:cordova-acoustic-mobile-push-sdk-beta@^3.9.24",
         "jquery": "^3.6.0"
     },
     "repository": {
-        "directory": "plugins/cordova-acoustic-mobile-push-plugin-inapp",
         "type": "git",
-        "url": "https://github.com/aipoweredmarketer/ca-mce-cordova-sdk"
+        "url": "git+https://github.com/aipoweredmarketer/ca-mce-cordova-sdk.git",
+        "directory": "plugins/cordova-acoustic-mobile-push-plugin-inapp"
     },
-    "version": "3.9.23"
+    
+    "version": "3.9.24"
 }
