--- a/plugins/cordova-acoustic-mobile-push-plugin-geofence/package.json
+++ b/plugins/cordova-acoustic-mobile-push-plugin-geofence/package.json
@@ -31,12 +31,13 @@
     "license": "See license in license/license.txt",
     "name": "cordova-acoustic-mobile-push-plugin-geofence-beta",
     "peerDependencies": {
-        "cordova-acoustic-mobile-push-sdk-beta": "3.9.23"
+        "cordova-acoustic-mobile-push-sdk": "npm:cordova-acoustic-mobile-push-sdk-beta@^3.9.24"
     },
     "repository": {
-        "directory": "plugins/cordova-acoustic-mobile-push-plugin-geofence",
         "type": "git",
-        "url": "https://github.com/aipoweredmarketer/ca-mce-cordova-sdk"
+        "url": "git+https://github.com/aipoweredmarketer/ca-mce-cordova-sdk.git",
+        "directory": "plugins/cordova-acoustic-mobile-push-plugin-geofence"
     },
-    "version": "3.9.23"
+    
+    "version": "3.9.24"
 }
