--- a/applications/samples/Sample/package.json
+++ b/applications/samples/Sample/package.json
@@ -7,9 +7,9 @@
     "plugins": {
       "cordova-acoustic-mobile-push-sdk": {
         "CUSTOM_ACTIONS": "openInboxMessage sendEmail",
-        "ANDROID_APPKEY": "",
-        "IOS_DEV_APPKEY": "",
-        "IOS_PROD_APPKEY": "",
+        "ANDROID_APPKEY": "YOUR ANDROID APPKEY HERE",
+        "IOS_DEV_APPKEY": "YOUR iOS APPKEY HERE",
+        "IOS_PROD_APPKEY": "YOUR iOS APPKEY HERE",
         "SERVER_URL": "https://mobile-sdk-lib-xx-y.brilliantcollector.com",
         "LOGLEVEL": "error",
         "MCE_CAN_SYNC_OVERRIDE": "true",
@@ -46,20 +46,20 @@
     ]
   },
   "devDependencies": {
-    "cordova-acoustic-mobile-push-plugin-action-menu-beta": "^3.9.17",
-    "cordova-acoustic-mobile-push-plugin-beacon-beta": "^3.9.17",
-    "cordova-acoustic-mobile-push-plugin-calendar-beta": "^3.9.17",
-    "cordova-acoustic-mobile-push-plugin-dial-beta": "^3.9.17",
-    "cordova-acoustic-mobile-push-plugin-displayweb-beta": "^3.9.17",
-    "cordova-acoustic-mobile-push-plugin-fcm-beta": "^3.9.17",
-    "cordova-acoustic-mobile-push-plugin-geofence-beta": "^3.9.17",
-    "cordova-acoustic-mobile-push-plugin-inapp-beta": "^3.9.17",
-    "cordova-acoustic-mobile-push-plugin-inbox-beta": "^3.9.17",
-    "cordova-acoustic-mobile-push-plugin-ios-notification-service-beta": "^3.9.17",
-    "cordova-acoustic-mobile-push-plugin-location-beta": "^3.9.17",
-    "cordova-acoustic-mobile-push-plugin-passbook-beta": "^3.9.17",
-    "cordova-acoustic-mobile-push-plugin-snooze-beta": "^3.9.17",
-    "cordova-acoustic-mobile-push-sdk-beta": "^3.9.17",
+    "cordova-acoustic-mobile-push-plugin-action-menu-beta": "^3.9.25",
+    "cordova-acoustic-mobile-push-plugin-beacon-beta": "^3.9.25",
+    "cordova-acoustic-mobile-push-plugin-calendar-beta": "^3.9.25",
+    "cordova-acoustic-mobile-push-plugin-dial-beta": "^3.9.25",
+    "cordova-acoustic-mobile-push-plugin-displayweb-beta": "^3.9.25",
+    "cordova-acoustic-mobile-push-plugin-fcm-beta": "^3.9.25",
+    "cordova-acoustic-mobile-push-plugin-geofence-beta": "^3.9.25",
+    "cordova-acoustic-mobile-push-plugin-inapp-beta": "^3.9.25",
+    "cordova-acoustic-mobile-push-plugin-inbox-beta": "^3.9.25",
+    "cordova-acoustic-mobile-push-plugin-ios-notification-service-beta": "^3.9.25",
+    "cordova-acoustic-mobile-push-plugin-location-beta": "^3.9.25",
+    "cordova-acoustic-mobile-push-plugin-passbook-beta": "^3.9.25",
+    "cordova-acoustic-mobile-push-plugin-snooze-beta": "^3.9.25",
+    "cordova-acoustic-mobile-push-sdk-beta": "^3.9.25",
     "cordova-android": "^12.0.1",
     "cordova-ios": "^7.0.1"
   }
