--- a/plugins/cordova-acoustic-mobile-push-sdk/package.json
+++ b/plugins/cordova-acoustic-mobile-push-sdk/package.json
@@ -39,6 +39,11 @@
         "url": "git+https://github.com/aipoweredmarketer/ca-mce-cordova-sdk.git",
         "directory": "plugins/cordova-acoustic-mobile-push-sdk"
     },
-    
-    "version": "3.9.28"
+    "version": "3.9.29",
+    "dependencies": {
+        "chalk": "^4.1.2",
+        "ncp": "^2.0.0",
+        "plist": "^3.1.0",
+        "xml2js": "^0.6.2"
+    }
 }
