--- a/plugins/cordova-acoustic-mobile-push-sdk/package.json
+++ b/plugins/cordova-acoustic-mobile-push-sdk/package.json
@@ -39,7 +39,11 @@
         "url": "git+https://github.com/aipoweredmarketer/ca-mce-cordova-sdk.git",
         "directory": "plugins/cordova-acoustic-mobile-push-sdk"
     },
-    "version": "3.9.29",
+    "scripts": {
+        "postinstall": "node scripts/postinstall.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "version": "3.9.30",
     "dependencies": {
         "chalk": "^4.1.2",
         "ncp": "^2.0.0",
