--- a/applications/samples/Sample/package.json
+++ b/applications/samples/Sample/package.json
@@ -6,20 +6,15 @@
   "cordova": {
     "plugins": {
       "cordova-acoustic-mobile-push-sdk": {
-        "CUSTOM_ACTIONS": "openInboxMessage sendEmail",
-        "ANDROID_APPKEY": "YOUR ANDROID APPKEY HERE",
-        "IOS_DEV_APPKEY": "YOUR iOS APPKEY HERE",
-        "IOS_PROD_APPKEY": "YOUR iOS APPKEY HERE",
-        "SERVER_URL": "https://mobile-sdk-lib-xx-y.brilliantcollector.com",
+        "CUSTOM_ACTIONS": "",
+        "ANDROID_APPKEY": "INSERT APP KEY HERE",
+        "IOS_DEV_APPKEY": "INSERT YOUR DEV APPKEY HERE",
+        "IOS_PROD_APPKEY": "INSERT YOUR PROD APPKEY HERE",
+        "SERVER_URL": "https://mobile-sdk-lib-XX-Y.brilliantcollector.com",
         "LOGLEVEL": "error",
-        "MCE_CAN_SYNC_OVERRIDE": "true",
-        "CHANNEL_NAME": "MCE SDK Notification Channel",
-        "CHANNEL_DESCRIPTION": "This is the notification channel for the MCE SDK sample application",
-        "CHANNEL_ID": "mce_sample_channel",
-        "INVALIDATE_EXISTING_USER": "false",
-        "AUTO_REINITIALIZE": "true",
-        "AUTO_INITIALIZE": "true"
+        "MCE_CAN_SYNC_OVERRIDE": "true"
       },
+      "cordova-acoustic-mobile-push-plugin-ios-notification-service": {},
       "cordova-acoustic-mobile-push-plugin-fcm": {},
       "cordova-acoustic-mobile-push-plugin-location": {
         "SYNC_RADIUS": "10000",
@@ -36,7 +31,6 @@
       "cordova-acoustic-mobile-push-plugin-snooze": {},
       "cordova-acoustic-mobile-push-plugin-calendar": {},
       "cordova-acoustic-mobile-push-plugin-geofence": {},
-      "cordova-acoustic-mobile-push-plugin-ios-notification-service": {},
       "cordova-acoustic-mobile-push-plugin-action-menu": {},
       "cordova-acoustic-mobile-push-plugin-passbook": {}
     },
@@ -46,20 +40,20 @@
     ]
   },
   "devDependencies": {
-    "cordova-acoustic-mobile-push-plugin-action-menu-beta": "^3.9.29",
-    "cordova-acoustic-mobile-push-plugin-beacon-beta": "^3.9.29",
-    "cordova-acoustic-mobile-push-plugin-calendar-beta": "^3.9.29",
-    "cordova-acoustic-mobile-push-plugin-dial-beta": "^3.9.29",
-    "cordova-acoustic-mobile-push-plugin-displayweb-beta": "^3.9.29",
-    "cordova-acoustic-mobile-push-plugin-fcm-beta": "^3.9.29",
-    "cordova-acoustic-mobile-push-plugin-geofence-beta": "^3.9.29",
-    "cordova-acoustic-mobile-push-plugin-inapp-beta": "^3.9.29",
-    "cordova-acoustic-mobile-push-plugin-inbox-beta": "^3.9.29",
-    "cordova-acoustic-mobile-push-plugin-ios-notification-service-beta": "^3.9.29",
-    "cordova-acoustic-mobile-push-plugin-location-beta": "^3.9.29",
-    "cordova-acoustic-mobile-push-plugin-passbook-beta": "^3.9.29",
-    "cordova-acoustic-mobile-push-plugin-snooze-beta": "^3.9.29",
-    "cordova-acoustic-mobile-push-sdk-beta": "^3.9.29",
+    "cordova-acoustic-mobile-push-plugin-action-menu-beta": "^3.9.30",
+    "cordova-acoustic-mobile-push-plugin-beacon-beta": "^3.9.30",
+    "cordova-acoustic-mobile-push-plugin-calendar-beta": "^3.9.30",
+    "cordova-acoustic-mobile-push-plugin-dial-beta": "^3.9.30",
+    "cordova-acoustic-mobile-push-plugin-displayweb-beta": "^3.9.30",
+    "cordova-acoustic-mobile-push-plugin-fcm-beta": "^3.9.30",
+    "cordova-acoustic-mobile-push-plugin-geofence-beta": "^3.9.30",
+    "cordova-acoustic-mobile-push-plugin-inapp-beta": "^3.9.30",
+    "cordova-acoustic-mobile-push-plugin-inbox-beta": "^3.9.30",
+    "cordova-acoustic-mobile-push-plugin-ios-notification-service-beta": "^3.9.30",
+    "cordova-acoustic-mobile-push-plugin-location-beta": "^3.9.30",
+    "cordova-acoustic-mobile-push-plugin-passbook-beta": "^3.9.30",
+    "cordova-acoustic-mobile-push-plugin-snooze-beta": "^3.9.30",
+    "cordova-acoustic-mobile-push-sdk-beta": "^3.9.30",
     "cordova-android": "^12.0.1",
     "cordova-ios": "^7.1.0"
   }
