Beta AcousticMobilePush build: 3.9.35
Beta AcousticMobilePush Change Notes:
Bug Fixes

- None

Improvements

- Deploy to npm at ....

Our environment for this release:

- Android Studio Hedgehog | 2023.1.1 Patch 1
- Xcode version: 15
- MacOS 14.0
- iOS
- Android target API level 21 to 34
- Cordova version: 11.1.0 (cordova-lib@11.1.0)
- Cordova Android plugin version: 10.1.2
- Cordova iOS plugin version: 6.3.0
- Gradle version: 7.6

Known Issues

- None.

--- a/plugins/cordova-acoustic-mobile-push-sdk/package.json
+++ b/plugins/cordova-acoustic-mobile-push-sdk/package.json
@@ -40,9 +40,10 @@
         "directory": "plugins/cordova-acoustic-mobile-push-sdk"
     },
     "scripts": {
+        "postinstall": "node scripts/postinstall.js $INIT_CWD",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "version": "3.9.34",
+    "version": "3.9.35",
     "dependencies": {
         "chalk": "^4.1.2",
         "ncp": "^2.0.0",
