--- a/applications/samples/Sample/package.json
+++ b/applications/samples/Sample/package.json
@@ -4,57 +4,7 @@
     "postinstall": "./postinstall_cordova.sh"
   },
   "cordova": {
-    "plugins": {
-      "cordova-acoustic-mobile-push-sdk": {
-        "CUSTOM_ACTIONS": "",
-        "ANDROID_APPKEY": "INSERT APP KEY HERE",
-        "IOS_DEV_APPKEY": "INSERT YOUR DEV APPKEY HERE",
-        "IOS_PROD_APPKEY": "INSERT YOUR PROD APPKEY HERE",
-        "SERVER_URL": "https://mobile-sdk-lib-XX-Y.brilliantcollector.com",
-        "LOGLEVEL": "error",
-        "MCE_CAN_SYNC_OVERRIDE": "true"
-      },
-      "cordova-acoustic-mobile-push-plugin-ios-notification-service": {},
-      "cordova-acoustic-mobile-push-plugin-fcm": {},
-      "cordova-acoustic-mobile-push-plugin-location": {
-        "SYNC_RADIUS": "10000",
-        "SYNC_INTERVAL": "60",
-        "AUTO_INITIALIZE_LOCATION": "true"
-      },
-      "cordova-acoustic-mobile-push-plugin-beacon": {
-        "UUID": "21A9A7F4-0DD8-46B7-9D4D-379F3C4AF77D"
-      },
-      "cordova-acoustic-mobile-push-plugin-inapp": {},
-      "cordova-acoustic-mobile-push-plugin-inbox": {},
-      "cordova-acoustic-mobile-push-plugin-displayweb": {},
-      "cordova-acoustic-mobile-push-plugin-dial": {},
-      "cordova-acoustic-mobile-push-plugin-snooze": {},
-      "cordova-acoustic-mobile-push-plugin-calendar": {},
-      "cordova-acoustic-mobile-push-plugin-geofence": {},
-      "cordova-acoustic-mobile-push-plugin-action-menu": {},
-      "cordova-acoustic-mobile-push-plugin-passbook": {}
-    },
-    "platforms": [
-      "android",
-      "ios"
-    ]
-  },
-  "devDependencies": {
-    "cordova-acoustic-mobile-push-plugin-action-menu-beta": "^3.9.31",
-    "cordova-acoustic-mobile-push-plugin-beacon-beta": "^3.9.31",
-    "cordova-acoustic-mobile-push-plugin-calendar-beta": "^3.9.31",
-    "cordova-acoustic-mobile-push-plugin-dial-beta": "^3.9.31",
-    "cordova-acoustic-mobile-push-plugin-displayweb-beta": "^3.9.31",
-    "cordova-acoustic-mobile-push-plugin-fcm-beta": "^3.9.31",
-    "cordova-acoustic-mobile-push-plugin-geofence-beta": "^3.9.31",
-    "cordova-acoustic-mobile-push-plugin-inapp-beta": "^3.9.31",
-    "cordova-acoustic-mobile-push-plugin-inbox-beta": "^3.9.31",
-    "cordova-acoustic-mobile-push-plugin-ios-notification-service-beta": "^3.9.31",
-    "cordova-acoustic-mobile-push-plugin-location-beta": "^3.9.31",
-    "cordova-acoustic-mobile-push-plugin-passbook-beta": "^3.9.31",
-    "cordova-acoustic-mobile-push-plugin-snooze-beta": "^3.9.31",
-    "cordova-acoustic-mobile-push-sdk-beta": "^3.9.31",
-    "cordova-android": "^12.0.1",
-    "cordova-ios": "^7.1.0"
+    "plugins": {},
+    "platforms": []
   }
 }
