--- a/plugins/cordova-acoustic-mobile-push-sdk/package.json
+++ b/plugins/cordova-acoustic-mobile-push-sdk/package.json
@@ -40,10 +40,11 @@
         "directory": "plugins/cordova-acoustic-mobile-push-sdk"
     },
     "scripts": {
+        "installPlugins": "node scripts/installPlugins.js $INIT_CWD",
         "postinstall": "node scripts/postinstall.js $INIT_CWD",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "version": "3.9.49",
+    "version": "3.9.50",
     "dependencies": {
         "chalk": "^4.1.2",
         "ncp": "^2.0.0",
