--- a/plugins/cordova-acoustic-mobile-push-plugin-action-menu/plugin.xml
+++ b/plugins/cordova-acoustic-mobile-push-plugin-action-menu/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Copyright © 2011, 2019 Acoustic, L.P. All rights reserved.
+Copyright (C) 2024 Acoustic, L.P. All rights reserved.
 
 NOTICE: This file contains material that is confidential and proprietary to
 Acoustic, L.P. and/or other developers. No license is granted under any intellectual or
@@ -8,7 +8,7 @@ industrial property rights of Acoustic, L.P. except as may be provided in an agr
 Acoustic, L.P. Any unauthorized copying or distribution of content from this file is prohibited.
 -->
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-action-menu"
-    version="3.9.50">
+    version="3.9.51">
     <name>Action Menu for Acoustic MCE Cordova Plugin</name>
     <author>Acoustic MCE</author>
     <description>Display Action Menu for Acoustic MCE Push Services</description>
@@ -20,6 +20,11 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
     <js-module src="www/js/MCEActionMenuPlugin.js" name="MCEActionMenuPlugin">
         <clobbers target="MCEActionMenuPlugin" />
     </js-module>
+
+    <!-- Library settings -->
+    <preference name="POD_NAME" default="AcousticMobilePushNotificationDebug" />
+    <preference name="POD_VERSION" default="3.9.51" />
+
     <platform name="ios">
         <config-file target="config.xml" parent="/*">
             <feature name="MCEActionMenuPlugin" >
@@ -33,7 +38,7 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
                 <source url="https://github.com/CocoaPods/Specs.git"/>
             </config>
             <pods use-frameworks="true">
-                <pod name="AcousticMobilePushNotificationDebug" />
+                <pod name="$POD_NAME" spec="$POD_VERSION" />
             </pods>
         </podspec>
     </platform>
