--- a/plugins/cordova-acoustic-mobile-push-plugin-beacon/plugin.xml
+++ b/plugins/cordova-acoustic-mobile-push-plugin-beacon/plugin.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <!-- 
-Copyright © 2011, 2019 Acoustic, L.P. All rights reserved.
+Copyright (C) 2024 Acoustic, L.P. All rights reserved.
 
 NOTICE: This file contains material that is confidential and proprietary to 
 Acoustic, L.P. and/or other developers. No license is granted under any intellectual or 
@@ -8,7 +8,7 @@ industrial property rights of Acoustic, L.P. except as may be provided in an agr
 Acoustic, L.P. Any unauthorized copying or distribution of content from this file is prohibited.
 -->
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-beacon"
-version="3.9.50">
+version="3.9.51">
     <name>Acoustic MCE iBeacon Cordova Plugin</name>
     <author>Acoustic MCE</author>
     <description>Allows Cordova applications to integrate with Acoustic MCE Push Services</description>
@@ -20,7 +20,13 @@ version="3.9.50">
     <js-module src="www/js/MCEBeaconPlugin.js" name="MCEBeaconPlugin">
         <clobbers target="MCEBeaconPlugin" />
     </js-module>
+
+    <!-- Library settings -->
+    <preference name="POD_NAME" default="AcousticMobilePushNotificationDebug" />
+    <preference name="POD_VERSION" default="3.9.51" />
+
     <preference name="UUID" value="10000" />
+
     <platform name="ios">
         <header-file src="src/ios/MCEBeaconPlugin.h" />
         <source-file src="src/ios/MCEBeaconPlugin.m" />
@@ -36,7 +42,7 @@ version="3.9.50">
                 <source url="https://github.com/CocoaPods/Specs.git"/>
             </config>
             <pods use-frameworks="true">
-                <pod name="AcousticMobilePushNotificationDebug" />
+                <pod name="$POD_NAME" spec="$POD_VERSION" />
             </pods>
         </podspec>
     </platform>
