--- a/plugins/cordova-acoustic-mobile-push-plugin-calendar/plugin.xml
+++ b/plugins/cordova-acoustic-mobile-push-plugin-calendar/plugin.xml
@@ -7,7 +7,7 @@ Acoustic, L.P. and/or other developers. No license is granted under any intellec
 industrial property rights of Acoustic, L.P. except as may be provided in an agreement with 
 Acoustic, L.P. Any unauthorized copying or distribution of content from this file is prohibited.
 -->
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-calendar" version="3.9.50">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-calendar" version="3.9.51">
   <name>Calendar Action for Acoustic MCE Cordova Plugin</name>
   <author>Acoustic MCE</author>
   <description>Calendar Action for Acoustic MCE Push Services</description>
@@ -19,35 +19,39 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
   <js-module src="www/js/MCECalendarPlugin.js" name="MCECalendarPlugin">
     <clobbers target="MCECalendarPlugin" />
   </js-module>
-    <platform name="ios">
-        <config-file target="config.xml" parent="/*">
-            <feature name="MCECalendarPlugin" >
-                <param name="ios-package" value="MCECalendarPlugin"/>
-            </feature>
-        </config-file>    
-        <framework src="EventKit.framework" />
-        <framework src="EventKitUI.framework" />
-        <header-file src="src/ios/MCECalendarPlugin.h" />
-        <source-file src="src/ios/MCECalendarPlugin.m" />
-        <config-file target="*-Info.plist" parent="NSCalendarsUsageDescription">
-            <string>Add interesting things to the calendar</string>
-        </config-file>
-        <podspec>
-            <config>
-                <source url="https://github.com/CocoaPods/Specs.git"/>
-            </config>
-            <pods use-frameworks="true">
-                <pod name="AcousticMobilePushNotificationDebug" />
-            </pods>
-        </podspec>
-    </platform>
-    <platform name="android">
-      <config-file target="config.xml" parent="/*">
-        <feature name="MCECalendarPlugin" >
-          <param name="android-package" value="co.acoustic.mobile.push.plugin.calendar.MCECalendarPlugin"/>
-        </feature>
-      </config-file>
-      <framework src="src/android/build-extras.gradle" custom="true" type="gradleReference" />
-      <source-file src="src/android/assets/mce/plugins/calendar.json" target-dir="assets/mce/plugins" framework="false" />
-    </platform>
+  <!-- Library settings -->
+  <preference name="POD_NAME" default="AcousticMobilePushNotificationDebug" />
+  <preference name="POD_VERSION" default="3.9.51" />
+
+  <platform name="ios">
+    <config-file target="config.xml" parent="/*">
+      <feature name="MCECalendarPlugin" >
+        <param name="ios-package" value="MCECalendarPlugin"/>
+      </feature>
+    </config-file>    
+    <framework src="EventKit.framework" />
+    <framework src="EventKitUI.framework" />
+    <header-file src="src/ios/MCECalendarPlugin.h" />
+    <source-file src="src/ios/MCECalendarPlugin.m" />
+    <config-file target="*-Info.plist" parent="NSCalendarsUsageDescription">
+      <string>Add interesting things to the calendar</string>
+    </config-file>
+    <podspec>
+      <config>
+        <source url="https://github.com/CocoaPods/Specs.git"/>
+      </config>
+      <pods use-frameworks="true">
+        <pod name="$POD_NAME" spec="$POD_VERSION" />
+      </pods>
+    </podspec>
+  </platform>
+  <platform name="android">
+    <config-file target="config.xml" parent="/*">
+      <feature name="MCECalendarPlugin" >
+        <param name="android-package" value="co.acoustic.mobile.push.plugin.calendar.MCECalendarPlugin"/>
+      </feature>
+    </config-file>
+    <framework src="src/android/build-extras.gradle" custom="true" type="gradleReference" />
+    <source-file src="src/android/assets/mce/plugins/calendar.json" target-dir="assets/mce/plugins" framework="false" />
+  </platform>
 </plugin>
