--- a/plugins/cordova-acoustic-mobile-push-plugin-location/plugin.xml
+++ b/plugins/cordova-acoustic-mobile-push-plugin-location/plugin.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <!-- 
-Copyright © 2011, 2019 Acoustic, L.P. All rights reserved.
+Copyright (C) 2024 Acoustic, L.P. All rights reserved.
 
 NOTICE: This file contains material that is confidential and proprietary to 
 Acoustic, L.P. and/or other developers. No license is granted under any intellectual or 
@@ -8,7 +8,7 @@ industrial property rights of Acoustic, L.P. except as may be provided in an agr
 Acoustic, L.P. Any unauthorized copying or distribution of content from this file is prohibited.
 -->
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-location"
-version="3.9.50">
+version="3.9.51">
     <name>Acoustic MCE Location Cordova Plugin</name>
     <author>Acoustic MCE</author>
     <description>Allows Cordova applications to integrate with Acoustic MCE Push Services</description>
@@ -20,6 +20,11 @@ version="3.9.50">
     <js-module src="www/js/MCELocationPlugin.js" name="MCELocationPlugin">
         <clobbers target="MCELocationPlugin" />
     </js-module>
+
+    <!-- Library settings -->
+    <preference name="POD_NAME" default="AcousticMobilePushDebug" />
+    <preference name="POD_VERSION" default="3.9.51" />
+
     <preference name="SYNC_RADIUS" default="100000" />
     <preference name="SYNC_INTERVAL" default="600" />
     <preference name="AUTO_INITIALIZE_LOCATION" default="true" />
@@ -59,13 +64,13 @@ version="3.9.50">
                 <source url="https://github.com/CocoaPods/Specs.git"/>
             </config>
             <pods use-frameworks="true">
-                <pod name="AcousticMobilePushDebug" />
+                <pod name="$POD_NAME" spec="$POD_VERSION" />
             </pods>
         </podspec>
     </platform>
     <platform name="android">
 
-        <framework src="com.google.android.gms:play-services-location:18.0.0" />
+        <framework src="com.google.android.gms:play-services-location:21.0.1" />
         <framework src="src/android/build-extras.gradle" custom="true" type="gradleReference" />
         <source-file src="src/android/src/co/acoustic/mobile/push/plugin/cordova/location" target-dir="java/co/acoustic/mobile/push/plugin/cordova" />
         <source-file src="src/android/src/co/acoustic/mobile/push/sdk/js/location" target-dir="java/co/acoustic/mobile/push/sdk/js" />
