--- a/plugins/cordova-acoustic-mobile-push-sdk/plugin.xml
+++ b/plugins/cordova-acoustic-mobile-push-sdk/plugin.xml
@@ -7,7 +7,7 @@ Acoustic, L.P. and/or other developers. No license is granted under any intellec
 industrial property rights of Acoustic, L.P. except as may be provided in an agreement with 
 Acoustic, L.P. Any unauthorized copying or distribution of content from this file is prohibited.
 -->
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-sdk" version="3.9.50">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-sdk" version="3.9.51">
     <name>Acoustic MCE Cordova Plugin</name>
     <author>Acoustic MCE</author>
     <description>Allows Cordova applications to integrate with Acoustic MCE Push Services</description>
@@ -19,6 +19,10 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
     <js-module src="www/js/MCEPlugin.js" name="MCEPlugin">
         <clobbers target="MCEPlugin" />
     </js-module>
+
+    <!-- Library settings -->
+    <preference name="POD_NAME" default="AcousticMobilePushDebug" />
+    <preference name="POD_VERSION" default="3.9.51" />
 
     <preference name="CHANNEL_NAME" default="MCE SDK Notification Channel" />
     <preference name="CHANNEL_DESCRIPTION" default="This is the notification channel for the MCE SDK sample application"/>
@@ -76,7 +80,7 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
                 <source url="https://github.com/CocoaPods/Specs.git"/>
             </config>
             <pods use-frameworks="true">
-                <pod name="AcousticMobilePushDebug" />
+                <pod name="$POD_NAME" spec="$POD_VERSION" />
             </pods>
         </podspec>
     </platform>
@@ -84,7 +88,7 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
         <hook type="after_prepare" src="src/android/hooks/add_tools_namespace.js" />
         <hook type="after_prepare" src="src/android/hooks/after_prepare.js" />
 
-        <framework src="com.google.android.gms:play-services-base:17.6.0" />
+        <framework src="com.google.android.gms:play-services-base:18.3.0" />
         <framework src="com.google.android.gms:play-services-auth:+" />
 
         <config-file target="config.xml" parent="/*">
@@ -196,7 +200,6 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
                 <param name="android-package" value="co.acoustic.mobile.push.plugin.cordova.MceCordovaPlugin" />
             </feature>
         </config-file>
-        <source-file src="src/android/gson-2.2.4.jar" target-dir="libs" framework="false" />
         <framework src="src/android/build-extras.gradle" custom="true" type="gradleReference" />
         
         <source-file src="src/android/src/co/acoustic/mobile/push/plugin/cordova/CordovaJsonCallback.java" target-dir="co/acoustic/mobile/push/plugin/cordova" />
