--- a/plugins/cordova-acoustic-mobile-push-sdk/src/android/build-extras.gradle
+++ b/plugins/cordova-acoustic-mobile-push-sdk/src/android/build-extras.gradle
@@ -18,6 +18,7 @@ repositories{
 dependencies {
   implementation('androidx.appcompat:appcompat:1.6.0')
   implementation "io.github.go-acoustic:acoustic-mobile-push-android-sdk:+"
+  implementation 'com.google.code.gson:gson:2.2.4'
 }
 
 android {
