Beta AcousticMobilePush build: 3.9.64
Beta AcousticMobilePush Change Notes:
Bug Fixes

- None

Improvements

- Deploy to npm at ....

Our environment for this release:

- Android Studio Hedgehog | 2023.1.1 Patch 1
- Xcode version: 15
- MacOS 14.0
- iOS
- Android target API level 21 to 34
- Cordova version: 11.1.0 (cordova-lib@11.1.0)
- Cordova Android plugin version: 10.1.2
- Cordova iOS plugin version: 6.3.0
- Gradle version: 7.6

Known Issues

- None.

--- a/plugins/cordova-acoustic-mobile-push-plugin-displayweb/src/android/build-extras.gradle
+++ b/plugins/cordova-acoustic-mobile-push-plugin-displayweb/src/android/build-extras.gradle
@@ -1,8 +1,5 @@
 repositories{    
   jcenter()
-  flatDir {
-    dirs 'libs'
-  }
   google()
   mavenCentral()
   maven {
@@ -16,8 +13,8 @@ repositories{
 }
 
 dependencies {
-  implementation('androidx.appcompat:appcompat:1.6.0')
-  implementation "io.github.go-acoustic:acoustic-mobile-push-android-displayweb:+"
+  implementation "androidx.appcompat:appcompat:" + project.ext.androidxLibVersion
+  implementation "io.github.go-acoustic:acoustic-mobile-push-android-displayweb:" + project.ext.mobilePushVersion
 }
 
 android {
