--- a/plugins/cordova-acoustic-mobile-push-plugin-beacon/src/android/build-extras.gradle
+++ b/plugins/cordova-acoustic-mobile-push-plugin-beacon/src/android/build-extras.gradle
@@ -3,7 +3,7 @@ repositories{
 }
 
 dependencies {
-   implementation('androidx.appcompat:appcompat:1.6.0')
+   implementation "androidx.appcompat:appcompat:" + project.ext.androidxLibVersion
 }
 
 android {
