--- a/plugins/cordova-acoustic-mobile-push-plugin-calendar/src/android/build-extras.gradle
+++ b/plugins/cordova-acoustic-mobile-push-plugin-calendar/src/android/build-extras.gradle
@@ -1,8 +1,5 @@
 repositories{    
   jcenter()
-  flatDir {
-    dirs 'libs'
-  }
   google()
   mavenCentral()
   maven {
@@ -16,8 +13,8 @@ repositories{
 }
 
 dependencies {
-  implementation('androidx.appcompat:appcompat:1.6.0')
-  implementation "io.github.go-acoustic:acoustic-mobile-push-android-calendar:+"
+  implementation "androidx.appcompat:appcompat:" + project.ext.androidxLibVersion
+  implementation "io.github.go-acoustic:acoustic-mobile-push-android-calendar:" + project.ext.mobilePushVersion
 }
 
 android {
