--- a/plugins/cordova-acoustic-mobile-push-plugin-snooze/src/android/build-extras.gradle
+++ b/plugins/cordova-acoustic-mobile-push-plugin-snooze/src/android/build-extras.gradle
@@ -16,8 +16,8 @@ repositories{
 }
 
 dependencies {
-  implementation('androidx.appcompat:appcompat:1.6.0')
-  implementation "io.github.go-acoustic:acoustic-mobile-push-android-snooze:+"
+  implementation "androidx.appcompat:appcompat:" + project.ext.androidxLibVersion
+  implementation "io.github.go-acoustic:acoustic-mobile-push-android-snooze:" + project.ext.playServicesLocationVersion
 }
 
 android {
