--- a/plugins/cordova-acoustic-mobile-push-sdk/src/android/build-extras.gradle
+++ b/plugins/cordova-acoustic-mobile-push-sdk/src/android/build-extras.gradle
@@ -16,9 +16,12 @@ repositories{
 }
 
 dependencies {
-  implementation('androidx.appcompat:appcompat:1.6.0')
-  implementation "com.google.android.gms:play-services-base:18.3.0"
-  implementation "io.github.go-acoustic:acoustic-mobile-push-android-sdk:+"
+  implementation "androidx.appcompat:appcompat:" + project.ext.androidxLibVersion
+  implementation "com.google.android.gms:play-services-base:" + project.ext.playServicesBaseVersion
+  implementation "com.google.firebase:firebase-messaging:" + project.ext.firebaseMessagingVersion
+  implementation "com.google.firebase:firebase-core:" + project.ext.firebaseCoreVersion
+  // implementation "com.google.firebase:firebase-iid:+"
+  implementation "io.github.go-acoustic:acoustic-mobile-push-android-sdk:" + project.ext.mobilePushVersion
   implementation 'com.google.code.gson:gson:2.2.4'
 }
 
