Beta AcousticMobilePush build: 3.9.68
Beta AcousticMobilePush Change Notes:
Bug Fixes

- None

Improvements

- Deploy to npm at ....

Our environment for this release:

- Android Studio Hedgehog | 2023.1.1 Patch 1
- Xcode version: 15
- MacOS 14.0
- iOS
- Android target API level 21 to 34
- Cordova version: 11.1.0 (cordova-lib@11.1.0)
- Cordova Android plugin version: 10.1.2
- Cordova iOS plugin version: 6.3.0
- Gradle version: 7.6

Known Issues

- None.

--- a/applications/samples/Sample/CampaignConfig.json
+++ b/applications/samples/Sample/CampaignConfig.json
@@ -2,9 +2,9 @@
   "Please note": "<true/false>, for native SDK build.  True for release build, false for beta build",
   "useRelease": false,
   "iOS Version": "<x.xx.xxx>, native iOS SDK version",
-  "iOSVersion": "3.9.22",
+  "iOSVersion": "",
   "Android Version": "<x.xx.xxx>, native Android SDK version",
-  "androidVersion": "3.9.1",
+  "androidVersion": "",
 
   "plugins": {
     "Please note": "<true/false>, for cordova build.  True for release build, false for beta build",
