--- a/plugins/cordova-acoustic-mobile-push-sdk/CampaignConfig.json
+++ b/plugins/cordova-acoustic-mobile-push-sdk/CampaignConfig.json
@@ -1,10 +1,10 @@
 {
   "Please note": "<true/false>, for native SDK build.  True for release build, false for beta build",
   "useRelease": false,
-  "iOS Version": "<x.xx.xxx>, native iOS SDK version",
-  "iOSVersion": "3.9.22",
-  "Android Version": "<x.xx.xxx>, native Android SDK version",
-  "androidVersion": "3.9.1",
+  "iOS Version": "<x.xx.xxx>, native iOS SDK version, empty value will retrieve lastest version",
+  "iOSVersion": "",
+  "Android Version": "<x.xx.xxx>, native Android SDK version, empty value will retrieve lastest version",
+  "androidVersion": "",
 
   "plugins": {
     "Please note": "<true/false>, for cordova build.  True for release build, false for beta build",
